# FastAPIAuth

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: LinterTests.yaml
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_05_29_2116-03fcdc940e7e_create_users_table.py  2025_05_29_2232-817251d15875_update_users_table.py  2025_06_02_2012-45fcd6c0528c_create_tokenblacklist_table.py  2025_06_02_2133-e69e73e156d7_create_tokenblacklist_table.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  hello.py
src/api/api_v1/auth/: auth.py  utils.py
src/api/api_v1/auth/tests/: conftest.py  mock_data.py  test_login.py  test_logout.py  test_refresh.py
src/api/api_v1/users/: users.py
src/core/: settings.py
src/core/models/: __init__.py  auth.py  base.py  db_helper.py  test.py  user.py
src/core/models/mixins/: id_int_pk.py
src/core/schemas/: auth.py  users.py
src/crud/: auth.py  users.py
src/tests/api/api_v1/auth/: conftest.py  test_get_me.py
src/tests/integration/api/api_v1/auth/: conftest.py  test_get_me.py  test_login.py  test_logout.py  test_refresh.py
src/tests/unit/api/api_v1/auth/: conftest.py  test_create_jwt.py  test_encode_decode_jwt.py  test_get_current_token_payload.py  test_get_jwt.py  test_get_user_id.py  test_rate_limited.py
src/utils/: case_converter.py
