[tool.poetry]
name = "fastapiauth"
version = "0.1.0"
description = ""
authors = ["spawlov <107248409+spawlov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standart"], version = "^0.34.2"}
pydantic = {extras = ["email"], version = "^2.11.5"}
pydantic-settings = "^2.9.1"
alembic = "^1.16.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
aiosqlite = "^0.21.0"
argon2-cffi = "^25.1.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
python-multipart = "^0.0.20"
httpx = "^0.28.1"
pytest = {extras = ["asyncio"], version = "^8.4.0"}
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.1"
flake8 = "^7.2.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
norecursedirs = ["build", "dist", ".git", "__pycache__"]
asyncio_mode = "auto"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3  # Вертикальное выравнивание
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["app"]  # Локальные модули
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "httpx"]  # Сторонние библиотеки
default_section = "THIRDPARTY"

[tool.flake8]
max-line-length = 120
ignore = [
    "E203",  # Конфликт с Black
    "E501",  # Длина строки (уже управляется Black/isort)
    "W503",  # Перенос строки перед оператором (Black так делает)
    "E402",  # Импорты не в начале файла (иногда нужно для FastAPI)
    "F401",  # Неиспользуемые импорты (можно игнорировать в __init__.py)
    "I100",  # Отключаем проверку порядка импортов (используем isort)
]
exclude = [
    "alembic",
    ".git",
    "__pycache__",
    ".venv",
    "migrations",
    "scripts",
    "tests",
]
per-file-ignores = [
    "__init__.py: F401",  # Разрешает неиспользуемые импорты в __init__.py
    "/*/tests/*.py: S101", # Использование assert в тестах
]
